got basic stuff working

--- a/db/questions.yaml
+++ b/db/questions.yaml
@@ -1,6 +1,7 @@
-version: 1.81
+version: 1.92
 questions:  #http://symfony.com/doc/current/components/yaml.html
   - question: 'Which industry are you most interested in?'
+    shortcode: 'industry'
     limit: 1
     answers:
       - "Home-Based"
@@ -12,6 +13,7 @@ questions:  #http://symfony.com/doc/current/components/yaml.html
       - "Residential Services"
       - "Open to All Industries"
   - question: 'Why are you most interested in opening a franchise?'
+    shortcode: 'interest'
     limit: 1,
     answers:
       - "Money"
@@ -21,6 +23,7 @@ questions:  #http://symfony.com/doc/current/components/yaml.html
       - "Personal Challenge"
       - "Need a Job"
   - question: 'Who else is involved in the process?'
+    shortcode: 'process'
     limit: 1,
     answers:
       - "Spouse"
@@ -29,6 +32,7 @@ questions:  #http://symfony.com/doc/current/components/yaml.html
       - "Friend"
       - "None of the above"
   - question: 'What is your current level of education?'
+    shortcode: 'education'
     limit: 1,
     answers:
       - "High School Diploma"
@@ -37,6 +41,7 @@ questions:  #http://symfony.com/doc/current/components/yaml.html
       - "Bachelor’s Degree"
       - "Post-Graduate Degree"
   - question: 'Where are you in your career?'
+    shortcode: 'career'
     limit: 1,
     answers:
       - "Student"
@@ -47,11 +52,13 @@ questions:  #http://symfony.com/doc/current/components/yaml.html
       - "Unemployed"
       - "Self-employed"
   - question: 'Are you a homeowner?'
+    shortcode: 'homeowner'
     limit: 1,
     answers:
       - "Yes"
       - "No"
   - question: 'How is your credit? '
+    shortcode: 'credit'
     limit: 1,
     answers:
       - "It’s Great! (720+)"
@@ -59,6 +66,7 @@ questions:  #http://symfony.com/doc/current/components/yaml.html
       - "It’s Okay (Below 680)"
       - "I’m Not Sure"
   - question: 'What is your budget to open a franchise? (cash available on-hand excluding any possible loans) '
+    shortcode: 'budget'
     limit: 1,
     answers:
       - "$25k - $50k"
@@ -67,12 +75,18 @@ questions:  #http://symfony.com/doc/current/components/yaml.html
       - "$100k to $250k"
       - "$250k+"
   - question: 'Have you ever owned a business before?'
+    shortcode: 'business'
     limit: 1,
     answers:
       - "Yes"
       - "No"
   - question: 'Have you ever looked into owning a franchise before?'
+    shortcode: 'franchise'
     limit: 1,
     answers:
       - "Yes"
       - "No"
+  - question: 'Please give us a little information about you'
+    shortcode: 'finish'
+    limit: 0,
+    answers:
