--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "symfony/yaml": "^3.4",
-        "hashids/hashids": "^1.0"
+        "hashids/hashids": "^1.0",
+        "ryanwinchester/hubspot-php": "~1.0"
     }
 }
